<resources>
  <string name="app_name">Palmchat</string>
  <string name="product_id">palmchat_5.1.4_2016_01_19</string>
  <string name="region_db_version">3</string>
  <string name="notify_sent_msg"> sent you a message</string>
  <string name="start">Start</string>
  <string name="home">Locals</string>
  <string name="notifications">Notifications</string>
  <string name="make_friends">Explore</string>
  <string name="invite_friends">Invite Friends</string>
  <string name="add_friend_req">Request sent. Please wait.</string>
  <string name="add">Add</string>
  <string name="chat">Chat</string>
  <string name="msg_voice">[VOICE]</string>
  <string name="msg_image">[IMAGE]</string>
  <string name="msg_recommend_friend">[Recommend Friends]</string>
  <string name="msg_custom_emoticons">[Custom Stickers]</string>
  <string name="email_dialog_messages">Using a verified email box secures your account and personal information. Verify now?</string>
  <string name="yesterday">Yesterday</string>
  <string name="search_hint2">ID/Name/Phone</string>
  <string name="group">Group</string>
  <string name="search_hint">Search</string>
  <string name="afid_not_found">User does not exist</string>
  <string name="stranger">Strangers</string>
  <string name="test_num">99</string>
  <string name="groupchat">Group Chat</string>
  <string name="addgroup">Add a Group Chat</string>
  <string name="enter">Enter</string>
  <string name="groupnum_default">0/6</string>
  <string name="req_failed">Network unavailable.</string>
  <string name="delete_friend_dialog_content">Are you sure you want to delete?</string>
  <string name="delete_friend_dialog_content2">Are you sure you want to delete this friend?</string>
  <string name="default_signature">Hey there! Let\'s chat on Palmchat now!</string>
  <string name="uploading">Uploading</string>
  <string name="no_local_search_result">No local search result</string>
  <string name="accurate_search">Exact search</string>
  <string name="empty">
  </string>
  <string name="you_offline">Network unavailable.</string>
  <string name="search">Search</string>
  <string name="please_wait">Please wait…</string>
  <string name="have_been_log_out">You\'ve been logged out because your account was logged in on another device.</string>
  <string name="group_you">You</string>
  <string name="no_update">You are using the latest version.</string>
  <string name="update_to">Update to </string>
  <string name="incremental_updating_model">Incremental updating model </string>
  <string name="message">Message</string>
  <string name="send">Send</string>
  <string name="camera">Camera</string>
  <string name="gallary">Gallery</string>
  <string name="album">Album</string>
  <string name="voice">Voice</string>
  <string name="forward">Forward</string>
  <string name="save_to_phone">Save to Phone</string>
  <string name="save_to_phone_failed">Save failed!</string>
  <string name="save_to_phone_exist">Picture has been in the album!</string>
  <string name="select">Select</string>
  <string name="friends">Friends</string>
  <string name="without_sdcard_cannot_play_voice_and_so_on">No memory card. Profile photo, image and audio are unavailable now.</string>
  <string name="resend">Resend</string>
  <string name="sure">Sure!</string>
  <string name="not_now">Not now</string>
  <string name="no_thanks">No, thanks</string>
  <string name="copy">Copy</string>
  <string name="switch_speaker_mode">Speaker Mode On</string>
  <string name="switch_handset_mode">Handset Mode On</string>
  <string name="clear_chat_records">Clear Chat History</string>
  <string name="already_top">Always on Top.</string>
  <string name="clear_chat_history">Are you sure you want to delete chat history?</string>
  <string name="name_card">[Name Card]</string>
  <string name="colon">:</string>
  <string name="choose_right_birthday">Please select a correct date.</string>
  <string name="cancel_voice">Release to cancel</string>
  <string name="cancelled">Cancelled</string>
  <string name="max_selected_img">Up to {$target} photos can be selected.</string>
  <string name="change_one_only">Just change one you selected.</string>
  <string name="password_label">Password</string>
  <string name="login">Log In</string>
  <string name="af_id">Palm ID</string>
  <string name="username_label">Display Name</string>
  <string name="get_started">Get Started?</string>
  <string name="forget_password">Forgot Password?</string>
  <string name="get_password">Reset password</string>
  <string name="sign_up">Sign Up</string>
  <string name="confirm_country_code">Confirm your country code and enter your phone number.</string>
  <string name="waitting_sms_code">Waiting to automatically detect an SMS.</string>
  <string name="sign_up_with_phone_no">Sign up with Phone No.</string>
  <string name="login_with">You can also log in with:</string>
  <string name="login_phone_tips1">Phone Number</string>
  <string name="phone_number">Phone Number</string>
  <string name="prompt_input_afid">Please enter the Palm ID.</string>
  <string name="prompt_input_phone">Please enter your Phone number.</string>
  <string name="prompt_input_email">Please enter your Email address.</string>
  <string name="prompt_email_address_not_legal">Invalid email address</string>
  <string name="phone_inputcoutrycode_tips1">Invalid account. Please enter without a country code.</string>
  <string name="enter_password">Please enter the password</string>
  <string name="prompt_input_password_little6">The password must be 6 to 16 characters, letters and numbers are allowed.</string>
  <string name="invalid_password">Invalid account or password. Please enter again.</string>
  <string name="loading">Loading…</string>
  <string name="logining">Logging in</string>
  <string name="sign_up_ph">Sign up with Email</string>
  <string name="sign1">Select Your Country</string>
  <string name="sign2">Sign up with your email address</string>
  <string name="set_profile_photo">Select Picture</string>
  <string name="login_help_1">www.facebook.com/PalmchatNow</string>
  <string name="login_help_2">feedback@afmobigroup.com</string>
  <string name="reg_email">Email Address</string>
  <string name="set_your_password">Password(6~16 characters)</string>
  <string name="read_and_agree">Read and agree </string>
  <string name="login_with_phone">Log in with phone number</string>
  <string name="login_with_id">Log in with your Palm ID</string>
  <string name="re_enter_your_password">Re-enter password</string>
  <string name="next">Next</string>
  <string name="email">Email</string>
  <string name="cancel">Cancel</string>
  <string name="edit_phone_num">Edit</string>
  <string name="must_agree">You must read and agree to the Registration Agreement before using Palmchat.</string>
  <string name="bind_phone1">Bind Phone Number</string>
  <string name="email_has_registered">This email has been registered. Please log in.</string>
  <string name="number_has_registered">This number has been registered. Please log in.</string>
  <string name="recovery_verify">Your Palmchat code is {$targetSMSRandomCode}.This SMS is for Palmchat verification.Please ignore it if you\'re not using Palmchat.</string>
  <string name="verifyloading">Verifying...</string>
  <string name="invalid_number">Invalid number. Please enter again.</string>
  <string name="succeeded">Succeeded!</string>
  <string name="verify_success">Verification succeeded. You can find your password through this number.</string>
  <string name="bak_succeeded">Backup Succeeded!</string>
  <string name="restore_succeeded">Restore Succeeded!</string>
  <string name="others">Others</string>
  <string name="other">Other</string>
  <string name="oversea">Overseas</string>
  <string name="verification_code">Verification Code:</string>
  <string name="verification_code_not_correct">Incorrect authentication code. Please re-enter.</string>
  <string name="verification_code_not_empty">Please enter your authentication code.</string>
  <string name="text_random_promt">A new verification code has been sent to your phone. Please check and complete the verification process.</string>
  <string name="resend_code">If you didn\'t receive the code within 30 min, please try to resend.</string>
  <string name="sms_verification">SMS Verification</string>
  <string name="sms_verification_code_fail">SMS verification failed!</string>
  <string name="insert_sim">Please insert a SIM card.</string>
  <string name="explanation_password_reset_email">To reset your password, please enter your email address.</string>
  <string name="password_reset">Reset Password</string>
  <string name="password_reset_email_success">Please check your email for instructions</string>
  <string name="no_bind_email">This email is not verified.</string>
  <string name="me">Me</string>
  <string name="log_out">Log Out</string>
  <string name="ring_tones">Ring tones</string>
  <string name="phonebook_backup">Phonebook Backup</string>
  <string name="my_account">My Account</string>
  <string name="change_password">Change Password</string>
  <string name="settings_sound">Alert Sounds</string>
  <string name="settings_vibrate">Vibrate</string>
  <string name="lv">LV:0</string>
  <string name="settings_about">About</string>
  <string name="settings">Settings</string>
  <string name="edit_my_profile">Edit</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="send_gift">Send Gift</string>
  <string name="say_hi">Say Hi</string>
  <string name="system">System</string>
  <string name="download">Download</string>
  <string name="my_profile">My Profile</string>
  <string name="profile">Profile</string>
  <string name="hi">Hi</string>
  <string name="restore_address_book">Restore phonebook</string>
  <string name="back_up_address_book">Are you sure to create a backup for your phonebook? It will replace the phonebook on your P-Cloud</string>
  <string name="address_book_empty">Your phonebook is empty</string>
  <string name="sure_to_restore">Are you sure you want to restore the phonebook?</string>
  <string name="back_up">Back Up</string>
  <string name="upload_phonebook">Please upload your phonebook to P-Cloud first.</string>
  <string name="recovery">Recovery</string>
  <string name="download_phonebook">Download your phonebook from P-Cloud to your cell phone.</string>
  <string name="old_password">Old Password</string>
  <string name="new_password">New Password</string>
  <string name="confirm">Save</string>
  <string name="enter_old_password">Please enter your old password</string>
  <string name="fail_password_attempt">Failed Password Attempt.</string>
  <string name="phone">Phone</string>
  <string name="unverified">Not Verified</string>
  <string name="unlinked">Not Linked</string>
  <string name="eidt_email">Edit Email</string>
  <string name="countrycode_and_phone_tips">Please confirm your country and enter your phone number without the country code</string>
  <string name="secure_answer">Security Answer</string>
  <string name="prompt_input_region">Please select your state or region</string>
  <string name="ok">Ok</string>
  <string name="operate">Operate</string>
  <string name="rate_palmchat">Rate Palmchat</string>
  <string name="give_score">Love Palmchat? Can you take a second to rate our app?</string>
  <string name="log_in_with">Log in with Facebook</string>
  <string name="rechar">Please scratch your recharge card to get Password.</string>
  <string name="account">Account</string>
  <string name="search_country">Country</string>
  <string name="close_palmchat">Close Palmchat</string>
  <string name="logout_des">Log in with another account</string>
  <string name="close_palmchat_des">No more messages will be received</string>
  <string name="fill_sms_code">Please enter your verification code</string>
  <string name="update_state_notice">We found your phone number is belonged to another country,please update your region information</string>
</resources>