<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" 
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    >
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/set_box_title"
	    android:layout_gravity="left"
	    android:gravity="left"
	    android:orientation="vertical"
        >
        <TextView
	        android:id="@+id/dialog_message_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/text_level_1"
	        android:text="@string/rate_palmchat"
	        android:layout_gravity="left"
	        android:gravity="left"
	        android:paddingTop="15dp"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:paddingLeft="15dp" />
        
        <TextView
	        android:id="@+id/dialog_message_give_store"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:gravity="left"
	        android:textColor="@color/text_level_3"
	        android:text="@string/give_score"
	        android:paddingTop="15dp"
	        android:paddingBottom="15dp"
	        android:paddingLeft="15dp"
	        android:textSize="16sp" />
    </LinearLayout> 
    
    <TextView
        android:id="@+id/dialog_message_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingRight="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="20dp"
        android:textColor="@color/text_level_1"
        android:text="@string/sure"
        android:background="@drawable/set_box_mid_btn_selector"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/dialog_message_not_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingRight="10dip"
        android:paddingBottom="10dip"
        android:textColor="@color/text_level_1"
        android:text="@string/not_now"
        android:background="@drawable/set_box_mid_btn_selector"
        android:textSize="16sp"
        android:paddingLeft="20dp" />
        
    <Button
        android:id="@+id/confim_button_no_thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingRight="10dip"
        android:paddingBottom="10dip"
        android:textColor="@color/text_level_1"
        android:text="@string/no_thanks"
        android:background="@drawable/set_box_single_selector"
        android:textSize="16sp"
        android:paddingLeft="20dp" />

</LinearLayout>