<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_secure_answer"
            style="@style/pop_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/accountdetails_arrow_marginright_size"
            android:drawableLeft="@drawable/icon_shet_security"
            android:text="@string/secure_answer"
            android:textSize="18sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_phoneNumber"
            style="@style/pop_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/accountdetails_arrow_marginright_size"
            android:drawableLeft="@drawable/icon_shet_phone_number"
            android:text="@string/phone_number"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_email"
            style="@style/pop_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/accountdetails_arrow_marginright_size"
            android:drawableLeft="@drawable/icon_shet_email_address"
            android:text="@string/reg_email"
            android:textSize="18sp" />
    </RelativeLayout>



</LinearLayout>