<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SystemBarTint_Style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_login_bg"
        android:orientation="vertical" >

        <include
            android:id="@id/title_layout"
            layout="@layout/head_back_title_more" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rechar"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/enter_card_num"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_fouse_selector"
                android:drawablePadding="3dp"
                android:hint="@string/account"
                android:inputType="number"
                android:maxLength="12"
                android:paddingLeft="8dp"
                android:textColorHint="@color/color_edittext_hint" />

            <EditText
                android:id="@+id/enter_card_pwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_fouse_selector"
                android:drawablePadding="3dp"
                android:hint="@string/password_label"
                android:inputType="number"
                android:maxLength="12"
                android:paddingLeft="8dp"
                android:textColorHint="@color/color_edittext_hint" />

            <Button
                android:id="@+id/payment_gt_recharging_btn_ok"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_button_selector"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>