<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_box"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/update_state_notice"
            android:textColor="@color/dialog_content_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/btn_predict_win_bg_selector"
            android:drawablePadding="18dp"
            android:drawableRight="@drawable/navigation_forward"
            android:gravity="center_vertical"
            android:hint="@string/search_country"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_predict_win_bg_selector"
            android:drawablePadding="18dp"
            android:drawableRight="@drawable/navigation_forward"
            android:gravity="center_vertical"
            android:hint="@string/prompt_input_region"
            android:padding="12dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_box_button_single_n"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/ok"
            android:textColor="@drawable/dialog_text_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>