<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SystemBarTint_Style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_login_bg"
        android:orientation="vertical" >

        <include layout="@layout/head_back_title_more" />

        <TextView
            android:id="@+id/txt_get_sms_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/fill_sms_code"
            android:textColor="@color/text_level_2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_sms_code"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/text_fouse_selector"
            android:digits="0123456789"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:hint="@string/verification_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:orientation="vertical"
            android:paddingLeft="8dp" >
        </EditText>

        <Button
            android:id="@id/next_button"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/long_button_height"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/btn_blue_d"
            android:text="@string/next"
            android:textSize="@dimen/accounts_imagetxt_titlttest_size"
            android:textColor="@color/guide_text_color" />
    </LinearLayout>

</LinearLayout>