<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_guide_four" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:contentDescription="@string/empty" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_login_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/login_button_selector"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/login_btn"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dip"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/log_in_with"
                android:textColor="#17a5ef"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fblogo36x36" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>